Trump2024/NEW-TERRAFORM-PROJECT1/module/vpc/nat.tf
resource "aws_nat_gateway" "gw1" {
  
  allocation_id = aws_eip.nat1.id

  
  subnet_id = aws_subnet.public-subnet-01.id    

  

  tags = merge(var.common_tags, {
    Name = format("%s-%s-%s-vpc-nat-01", var.common_tags["AssetID"], var.common_tags["Environment"], var.common_tags["Project"])
    },
  )
  
}

resource "aws_nat_gateway" "gw2" {

  allocation_id = aws_eip.nat2.id

  
  subnet_id = aws_subnet.public-subnet-02.id 

  
 tags = merge(var.common_tags, {
    Name = format("%s-%s-%s-vpc-nat-02", var.common_tags["AssetID"], var.common_tags["Environment"], var.common_tags["Project"])
    },
  )
}
