Trump2024/NEW-TERRAFORM-PROJECT1/module/vpc/routes.tf
resource "aws_route_table" "public" {
  
  vpc_id = aws_vpc.main.id

  route {
    
    cidr_block = "0.0.0.0/0"

    
    gateway_id = aws_internet_gateway.main.id
  }

  
   tags = merge(var.common_tags, {
    Name = format("%s-%s-%s-vpc-public-route", var.common_tags["AssetID"], var.common_tags["Environment"], var.common_tags["Project"])
    },
  )
}


resource "aws_route_table" "public1" {
  
  vpc_id = aws_vpc.main.id

  route {
    
    cidr_block = "0.0.0.0/0"

    
    gateway_id = aws_internet_gateway.main.id
  }

 
   tags = merge(var.common_tags, {
    Name = format("%s-%s-%s-vpc-public1-route", var.common_tags["AssetID"], var.common_tags["Environment"], var.common_tags["Project"])
    },
  )
}


resource "aws_route_table" "eks-private-01-route" {
  
  vpc_id = aws_vpc.main.id

  route {
   
    cidr_block = "0.0.0.0/0"

    
    nat_gateway_id = aws_nat_gateway.gw1.id
  }

  
  tags = merge(var.common_tags, {
    Name = format("%s-%s-%s-vpc-private-route-01", var.common_tags["AssetID"], var.common_tags["Environment"], var.common_tags["Project"])
    },
  )
}




resource "aws_route_table" "eks-private-02-route" {
  
  vpc_id = aws_vpc.main.id

  route {
    
    cidr_block = "0.0.0.0/0"

    
    nat_gateway_id = aws_nat_gateway.gw2.id
  }

  
 tags = merge(var.common_tags, {
    Name = format("%s-%s-%s-vpc-private-route-02", var.common_tags["AssetID"], var.common_tags["Environment"], var.common_tags["Project"])
    },
  )
}




resource "aws_route_table" "db-private-01-route" {
  
  vpc_id = aws_vpc.main.id

  route {
    
    cidr_block = "0.0.0.0/0"

    
    nat_gateway_id = aws_nat_gateway.gw1.id
  }

  
  tags = merge(var.common_tags, {
    Name = format("%s-%s-%s-vpc-private-db-route-01", var.common_tags["AssetID"], var.common_tags["Environment"], var.common_tags["Project"])
    },
  )
}


resource "aws_route_table" "db-private-02-route" {
  
  vpc_id = aws_vpc.main.id

  route {
    
    cidr_block = "0.0.0.0/0"

    
    nat_gateway_id = aws_nat_gateway.gw1.id
  }

  
   tags = merge(var.common_tags, {
    Name = format("%s-%s-%s-vpc-private-db-route-02", var.common_tags["AssetID"], var.common_tags["Environment"], var.common_tags["Project"])
    },
  )
}
